Change css of wrapper

--- a/my-app/src/Components/Div1.css
+++ b/my-app/src/Components/Div1.css
@@ -1,4 +1,8 @@
-.wrapper{
-   color:#0000FF;
-   padding: 20%;
+.Wrapper{
+   background-color:#EFDCCC;
+  
+   padding-block: 50%
+}
+.intro{
+ 
 }
