--- a/my-app/src/Components/Menu.css
+++ b/my-app/src/Components/Menu.css
@@ -1,13 +1,12 @@
 nav {
-    background-color: #591702;
+    background-color: brown;
     
     font-size: 18px;
   }
   
   nav ul {
+    text-decoration-color: #D3A075;
     list-style: none;
-    margin: 0;
-    padding: 0;
     display: flex;
     justify-content: space-between;
   }
@@ -20,10 +19,13 @@ nav {
     display: block;
     padding: 10px;
     text-decoration: none;
+    font-size: 16px;
+    transition: transform 0.5s ease-in-out;
   }
   
   nav a:hover {
-    background-color: #fff;
-    color: #333;
+  
+    font-size: 20px;
+    transform: scale(1.2);
   }
   
